--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -1,149 +1,151 @@
 {
-    "title": "Node.js",
-    "author": "Node.js Foundation",
-    "url": "https://nodejs.org/en/",
-    "locale": "en",
-    "scrollToTop": "Scroll to top",
-    "reportNodeIssue": "Report Node.js issue",
-    "reportWebsiteIssue": "Report website issue",
-    "getHelpIssue": "Get Help",
-    "by": "by",
-    "all-downloads": "All download options",
-    "nightly": "Nightly builds",
-    "chakracore-nightly": "Node-ChakraCore Nightly builds",
-    "previous": "Previous",
-    "next": "Next",
-    "feeds": [
-        {
-            "link": "feed/blog.xml",
-            "text": "Node.js Blog"
-        },
-        {
-            "link": "feed/releases.xml",
-            "text": "Node.js Blog: Releases"
-        },
-        {
-            "link": "feed/vulnerability.xml",
-            "text": "Node.js Blog: Vulnerability Reports"
-        }
-    ],
-    "home": { "text": "Home" },
-    "about": {
-        "link": "about",
-        "text": "About",
-        "governance": {
-            "link": "about/governance",
-            "text": "Governance"
-        },
-        "community": {
-            "link": "about/community",
-            "text": "Community"
-        },
-        "workinggroups": {
-            "link": "about/working-groups",
-            "text": "Working Groups"
-        },
-        "releases": {
-            "link": "about/releases",
-            "text": "Releases"
-        },
-        "resources": {
-            "link": "about/resources",
-            "text": "Resources"
-        },
-        "trademark": {
-            "link": "about/trademark",
-            "text": "Trademark"
-        },
-        "privacy": {
-            "link": "about/privacy",
-            "text": "Privacy Policy"
-        }
+  "title": "Node.js",
+  "author": "Node.js Foundation",
+  "url": "https://nodejs.org/en/",
+  "locale": "en",
+  "scrollToTop": "Scroll to top",
+  "reportNodeIssue": "Report Node.js issue",
+  "reportWebsiteIssue": "Report website issue",
+  "getHelpIssue": "Get Help",
+  "by": "by",
+  "all-downloads": "All download options",
+  "nightly": "Nightly builds",
+  "chakracore-nightly": "Node-ChakraCore Nightly builds",
+  "previous": "Previous",
+  "next": "Next",
+  "feeds": [
+    {
+      "link": "feed/blog.xml",
+      "text": "Node.js Blog"
     },
-    "download": {
-        "link": "download",
-        "text": "Downloads",
-        "releases": {
-            "link": "download/releases",
-            "text": "Previous Releases"
-        },
-        "package-manager": {
-            "link": "download/package-manager",
-            "text": "Installing Node.js via package manager"
-        },
-        "shasums":{
-          "link": "SHASUMS256.txt.asc",
-          "text": "Signed SHASUMS for release files"
-        }
+    {
+      "link": "feed/releases.xml",
+      "text": "Node.js Blog: Releases"
     },
-    "docs": {
-        "link": "docs",
-        "text": "Docs",
-        "es6": {
-            "link": "docs/es6",
-            "text": "ES6 and beyond"
-        },
-        "inspector": {
-            "link": "docs/inspector",
-            "text": "Inspector"
-        },
-        "api-lts": {
-            "link": "/dist/latest-%ver-major%/docs/api",
-            "subtext": "LTS",
-            "text": "%ver% API"
-        },
-        "api-current": {
-            "link": "/dist/latest-%ver-major%/docs/api",
-            "text": "%ver% API"
-        },
-        "guides": {
-            "link": "docs/guides",
-            "text": "Guides"
-        }
+    {
+      "link": "feed/vulnerability.xml",
+      "text": "Node.js Blog: Vulnerability Reports"
+    }
+  ],
+  "home": {
+    "text": "Home"
+  },
+  "about": {
+    "link": "about",
+    "text": "About",
+    "governance": {
+      "link": "about/governance",
+      "text": "Governance"
     },
-    "foundation": {
-        "link": "https://foundation.nodejs.org/",
-        "text": "Foundation"
+    "community": {
+      "link": "about/community",
+      "text": "Community"
     },
-    "getinvolved": {
-        "link": "get-involved",
-        "text": "Get Involved",
-        "code-and-learn": {
-            "link": "get-involved/code-and-learn",
-            "text": "Code + Learn"
-        },
-        "collab-summit": {
-            "link": "get-involved/collab-summit",
-            "text": "Collab Summit"
-        },
-        "contribute": {
-            "link": "get-involved/contribute",
-            "text": "Contribute"
-        },
-        "development": {
-            "link": "get-involved/development",
-            "text": "Development"
-        },
-        "conduct": {
-            "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
-            "text": "Conduct"
-        }
-    },
-    "security": {
-        "link": "security",
-        "text": "Security"
-    },
-    "blog": {
-        "link": "blog",
-        "text": "News"
+    "workinggroups": {
+      "link": "about/working-groups",
+      "text": "Working Groups"
     },
     "releases": {
-        "title": "Release History",
-        "downloads": "Downloads"
+      "link": "about/releases",
+      "text": "Releases"
     },
-    "links": {
-        "pages": {
-            "changelog": "Changelog"
-        }
+    "resources": {
+      "link": "about/resources",
+      "text": "Resources"
+    },
+    "trademark": {
+      "link": "about/trademark",
+      "text": "Trademark"
+    },
+    "privacy": {
+      "link": "about/privacy",
+      "text": "Privacy Policy"
     }
+  },
+  "download": {
+    "link": "download",
+    "text": "Downloads",
+    "releases": {
+      "link": "download/releases",
+      "text": "Previous Releases"
+    },
+    "package-manager": {
+      "link": "download/package-manager",
+      "text": "Installing Node.js via package manager"
+    },
+    "shasums": {
+      "link": "SHASUMS256.txt.asc",
+      "text": "Signed SHASUMS for release files"
+    }
+  },
+  "docs": {
+    "link": "docs",
+    "text": "Docs",
+    "es6": {
+      "link": "docs/es6",
+      "text": "ES6 and beyond"
+    },
+    "inspector": {
+      "link": "docs/inspector",
+      "text": "Inspector"
+    },
+    "api-lts": {
+      "link": "/dist/latest-%ver-major%/docs/api",
+      "subtext": "LTS",
+      "text": "%ver% API"
+    },
+    "api-current": {
+      "link": "/dist/latest-%ver-major%/docs/api",
+      "text": "%ver% API"
+    },
+    "guides": {
+      "link": "docs/guides",
+      "text": "Guides"
+    }
+  },
+  "getinvolved": {
+    "link": "get-involved",
+    "text": "Get Involved",
+    "code-and-learn": {
+      "link": "get-involved/code-and-learn",
+      "text": "Code + Learn"
+    },
+    "collab-summit": {
+      "link": "get-involved/collab-summit",
+      "text": "Collab Summit"
+    },
+    "contribute": {
+      "link": "get-involved/contribute",
+      "text": "Contribute"
+    },
+    "development": {
+      "link": "get-involved/development",
+      "text": "Development"
+    },
+    "conduct": {
+      "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
+      "text": "Conduct"
+    }
+  },
+  "security": {
+    "link": "security",
+    "text": "Security"
+  },
+  "blog": {
+    "link": "blog",
+    "text": "News"
+  },
+  "foundation": {
+    "link": "https://foundation.nodejs.org/",
+    "text": "Foundation"
+  },
+  "releases": {
+    "title": "Release History",
+    "downloads": "Downloads"
+  },
+  "links": {
+    "pages": {
+      "changelog": "Changelog"
+    }
+  }
 }
