--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -1,127 +1,134 @@
 {
-    "title": "Node.js",
-    "author": "Node.js 財団",
-    "url": "https://nodejs.org/ja/",
-    "locale": "ja",
-    "scrollToTop": "上部へスクロールする",
-    "reportNodeIssue": "Node.js の不具合を報告",
-    "reportWebsiteIssue": "サイトの不具合を報告",
-    "getHelpIssue": "ヘルプ",
-    "by": "by",
-    "all-downloads": "All download options",
-    "nightly": "Nightly builds",
-    "previous": "前",
-    "next": "次",
-    "feeds": [
-        {
-            "link": "feed/blog.xml",
-            "text": "Node.js ブログ"
-        },
-        {
-            "link": "feed/releases.xml",
-            "text": "Node.js ブログ: リリース"
-        },
-        {
-            "link": "feed/vulnerability.xml",
-            "text": "Node.js ブログ: 脆弱性のレポート"
-        }
-    ],
-    "home": { "text": "ホーム" },
-    "about": {
-        "link": "about",
-        "text": "Node.js とは",
-        "governance": {
-            "link": "about/governance",
-            "text": "委員会"
-        },
-        "workinggroups": {
-            "link": "about/working-groups",
-            "text": "ワーキンググループ"
-        },
-        "releases": {
-            "link": "about/releases",
-            "text": "リリース"
-        },
-        "resources": {
-            "link": "about/resources",
-            "text": "リソース"
-        },
-        "trademark": {
-            "link": "about/trademark",
-            "text": "トレードマーク"
-        }
+  "title": "Node.js",
+  "author": "Node.js 財団",
+  "url": "https://nodejs.org/ja/",
+  "locale": "ja",
+  "scrollToTop": "上部へスクロールする",
+  "reportNodeIssue": "Node.js の不具合を報告",
+  "reportWebsiteIssue": "サイトの不具合を報告",
+  "getHelpIssue": "ヘルプ",
+  "by": "by",
+  "all-downloads": "All download options",
+  "nightly": "Nightly builds",
+  "previous": "前",
+  "next": "次",
+  "feeds": [
+    {
+      "link": "feed/blog.xml",
+      "text": "Node.js ブログ"
     },
-    "download": {
-        "link": "download",
-        "text": "ダウンロード",
-        "releases": {
-            "link": "download/releases",
-            "text": "バージョンの一覧"
-        },
-        "package-manager": {
-            "link": "download/package-manager",
-            "text": "パッケージマネージャを使用したダウンロード"
-        },
-        "shasums":{
-          "link": "SHASUMS256.txt.asc",
-          "text": "リリースファイルのための SHASUM 署名"
-        }
+    {
+      "link": "feed/releases.xml",
+      "text": "Node.js ブログ: リリース"
     },
-    "docs": {
-        "link": "docs",
-        "text": "ドキュメント",
-        "es6": {
-            "link": "docs/es6",
-            "text": "ES6 について"
-        },
-        "api-lts": {
-            "link": "/dist/latest-%ver-major%/docs/api",
-            "subtext": "LTS",
-            "text": "%ver% API"
-        },
-        "api-current": {
-            "link": "/dist/latest-%ver-major%/docs/api",
-            "text": "%ver% API"
-        },
-        "guides": {
-            "link": "docs/guides",
-            "text": "ガイド"
-        }
-    },
-    "foundation": {
-        "link": "https://foundation.nodejs.org/",
-        "text": "財団"
-    },
-    "getinvolved": {
-        "link": "get-involved",
-        "text": "参加する",
-        "code-and-learn": {
-            "link": "get-involved/code-and-learn",
-            "text": "Code + Learn"
-        },
-        "contribute": {
-            "link": "get-involved/contribute",
-            "text": "貢献する"
-        },
-        "development": {
-            "link": "get-involved/development",
-            "text": "開発体制"
-        },
-        "conduct": {
-            "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
-            "text": "行動規範"
-        }
-    },
-    "security"   : { "link": "security",        "text": "セキュリティ" },
-    "blog"       : { "link": "blog",            "text": "ニュース" },
-
-    "releases": {
-        "title": "過去のリリース",
-        "downloads": "ダウンロード"
-    },
-    "links": {
-        "pages": {
-            "changelog": "変更履歴"
-        }
+    {
+      "link": "feed/vulnerability.xml",
+      "text": "Node.js ブログ: 脆弱性のレポート"
     }
+  ],
+  "home": {
+    "text": "ホーム"
+  },
+  "about": {
+    "link": "about",
+    "text": "Node.js とは",
+    "governance": {
+      "link": "about/governance",
+      "text": "委員会"
+    },
+    "workinggroups": {
+      "link": "about/working-groups",
+      "text": "ワーキンググループ"
+    },
+    "releases": {
+      "link": "about/releases",
+      "text": "リリース"
+    },
+    "resources": {
+      "link": "about/resources",
+      "text": "リソース"
+    },
+    "trademark": {
+      "link": "about/trademark",
+      "text": "トレードマーク"
+    }
+  },
+  "download": {
+    "link": "download",
+    "text": "ダウンロード",
+    "releases": {
+      "link": "download/releases",
+      "text": "バージョンの一覧"
+    },
+    "package-manager": {
+      "link": "download/package-manager",
+      "text": "パッケージマネージャを使用したダウンロード"
+    },
+    "shasums": {
+      "link": "SHASUMS256.txt.asc",
+      "text": "リリースファイルのための SHASUM 署名"
+    }
+  },
+  "docs": {
+    "link": "docs",
+    "text": "ドキュメント",
+    "es6": {
+      "link": "docs/es6",
+      "text": "ES6 について"
+    },
+    "api-lts": {
+      "link": "/dist/latest-%ver-major%/docs/api",
+      "subtext": "LTS",
+      "text": "%ver% API"
+    },
+    "api-current": {
+      "link": "/dist/latest-%ver-major%/docs/api",
+      "text": "%ver% API"
+    },
+    "guides": {
+      "link": "docs/guides",
+      "text": "ガイド"
+    }
+  },
+  "getinvolved": {
+    "link": "get-involved",
+    "text": "参加する",
+    "code-and-learn": {
+      "link": "get-involved/code-and-learn",
+      "text": "Code + Learn"
+    },
+    "contribute": {
+      "link": "get-involved/contribute",
+      "text": "貢献する"
+    },
+    "development": {
+      "link": "get-involved/development",
+      "text": "開発体制"
+    },
+    "conduct": {
+      "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
+      "text": "行動規範"
+    }
+  },
+  "security": {
+    "link": "security",
+    "text": "セキュリティ"
+  },
+  "blog": {
+    "link": "blog",
+    "text": "ニュース"
+  },
+  "foundation": {
+    "link": "https://foundation.nodejs.org/",
+    "text": "財団"
+  },
+  "releases": {
+    "title": "過去のリリース",
+    "downloads": "ダウンロード"
+  },
+  "links": {
+    "pages": {
+      "changelog": "変更履歴"
+    }
+  }
 }
